"Fixed some responsive layout issues"

--- a/packages/menu/public/assets/css/menu.css
+++ b/packages/menu/public/assets/css/menu.css
@@ -14,11 +14,12 @@
   width: 428px;
   margin: 0 auto;
   text-align: left;
+  padding-left: 0px;
 }
 
 /*#search ul li*/.search-li {
   border-bottom: 1px solid #ddd;
-  padding: 10px;
+/*  padding: 10px; */
   overflow: hidden;
   position: relative;
 }
