--- a/packages/recipes/public/assets/css/recipes.css
+++ b/packages/recipes/public/assets/css/recipes.css
@@ -10,3 +10,10 @@
   display: inline-block;
   margin-bottom: 5px;
 }
+
+.addIt {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+
